// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppShell visual regression > matches the shell snapshot in dark theme 1`] = `
<div>
  <div
    class="xjp7ctv x1tgivj0 x9ynric xntwwlm"
    data-astryx-theme="neutral"
    data-theme="dark"
  >
    <div
      class="astryx-app-shell elevated x78zum5 xdt5ytf x1n2onr6 x1eiddq6 x1ov3xa9"
      data-variant="elevated"
      style="--appshell-header-height: 0px;"
    >
      <a
        class="x10l6tqk x1xrnuwo x1i1rx1s x1jqxupm xjm9jq1 x15cytp8 xt970qd xh2mrf5 xnjsko4 x1cf3d6k xkdpibf x1y5lnwp xb3r6kr xomzh7y x1hyvwdk x1rsz1da xuxw1ft x1hbpcn8 xc342km x13vifvy x1rw3289 x1o0tod xodanix x10xzikg xjse4m1 x1q2oy4v x1hl2dhg x2mo6ok xjm74w1"
        data-testid="skip-to-content"
        href="#astryx-app-shell-main"
      >
        Skip to content
      </a>
      <div
        class="astryx-layout auto xojxgvx x1fcf3bl x1sa9bsh x6h7pi7 x1us19tq"
        data-height="auto"
      >
        <div
          class="x-default-marker xrhngw9 xjsfl84 x1047aw6 xax9j7h x78zum5 xdt5ytf x1us19tq xswhm3q x1mzf5mb"
        >
          <div
            class="astryx-app-shell-header elevated x1eiddq6 x7wzq59 x13vifvy x1vjfegm"
            data-variant="elevated"
          >
            <div
              class="astryx-layout-header x2lah0s"
            >
              <div
                class="x9f619 xjl2t3p xvueqy4 x18gyask x1s0aq8i x1ydh6w3 x1l20ajd x1gu2k80 x91ghl5 x1i3qcxz xkunwnr"
              >
                <nav
                  aria-label="Primary navigation"
                  class="astryx-top-nav x6s0dn4 xh8yej3 xlsj2fj x9f619 x78zum5"
                  role="navigation"
                >
                  <div
                    class="x78zum5 x6s0dn4 x18g69wz x845mor xeuugli"
                  >
                    <div
                      class="x78zum5 x6s0dn4 x2lah0s"
                    >
                      <a
                        aria-label="kbeatz"
                        class="astryx-link accent x3nfvp2 x6s0dn4 x1lsbc85 xjb2p0i x1qlqyl8 x15bjb6t x1pd3egz x1hl2dhg x4ohgrr x1ypdohk x1mpt4pi xuedmi6 xlr8y92 x17nn4n9 x1wfwxd8 x7s97pk xjse4m1 x17qfo7y"
                        data-color="accent"
                        data-discover="true"
                        href="/"
                      >
                        <span
                          class="astryx-text body accent xjse4m1 xjm74w1 xw6l6zx xxovm9e xt0psk2"
                          data-color="accent"
                          data-type="body"
                        >
                          <img
                            alt=""
                            height="32"
                            src="/src/assets/kbeatz-logo-dark.svg"
                            style="display: block; width: auto;"
                          />
                        </span>
                      </a>
                    </div>
                    <div
                      class="x78zum5 x6s0dn4 xzye2dw"
                    >
                      <div
                        class="kbeatz-desktop-only"
                      >
                        <div
                          class="astryx-stack horizontal gap-0.5 x78zum5 x1q0g3np x1kihgfc x1tw44j4 x6s0dn4"
                          data-direction="horizontal"
                          data-gap="0.5"
                        >
                          <a
                            aria-current="page"
                            class="astryx-top-nav-item selected x3nfvp2 x6s0dn4 x1txdalj x1vofgu7 xrrkdod xh6dtrn xcr08ib x1kq96og x1hl2dhg x1ypdohk xs2xxs2 xuedmi6 xlr8y92 x17nn4n9 x1wfwxd8 x7s97pk x1tgivj0 x2mo6ok x17x4s8c x1sua13m xjtnuge"
                            data-discover="true"
                            data-selected="selected"
                            href="/"
                          >
                            Albums
                          </a>
                          <a
                            class="astryx-top-nav-item x3nfvp2 x6s0dn4 x1txdalj x1vofgu7 xrrkdod xh6dtrn xcr08ib x1kq96og x1e4wzip xv1l7n4 x1hl2dhg x1ypdohk xs2xxs2 xuedmi6 xlr8y92 xjbqb8w xe9uy6x xyxi2l3 x17nn4n9 x1wfwxd8 x7s97pk"
                            data-discover="true"
                            href="/library"
                          >
                            Library
                          </a>
                          <a
                            class="astryx-top-nav-item x3nfvp2 x6s0dn4 x1txdalj x1vofgu7 xrrkdod xh6dtrn xcr08ib x1kq96og x1e4wzip xv1l7n4 x1hl2dhg x1ypdohk xs2xxs2 xuedmi6 xlr8y92 xjbqb8w xe9uy6x xyxi2l3 x17nn4n9 x1wfwxd8 x7s97pk"
                            data-discover="true"
                            href="/settings"
                          >
                            Settings
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="x78zum5 x6s0dn4 xzye2dw x2lah0s xvc5jky"
                  >
                    <div
                      class="astryx-stack horizontal gap-0.5 x78zum5 x1q0g3np x1kihgfc x1tw44j4 x6s0dn4"
                      data-direction="horizontal"
                      data-gap="0.5"
                    >
                      <button
                        aria-describedby="<reactid>"
                        aria-label="Switch to light theme"
                        class="astryx-button ghost md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 xjbqb8w x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x1v15ycx xioom0i xnjsko4 xt970qd x3oybdh xk4oym4"
                        data-astryx-edge-comp=""
                        data-size="md"
                        data-variant="ghost"
                        style="anchor-name: --astryx-layer-<reactid>;"
                        type="button"
                      >
                        <span
                          class="xjp7ctv"
                        >
                          <span
                            class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-sun astryx-icon md inherit x2lah0s x1heor9g xw4jnvo x1qx5ct2"
                              data-color="inherit"
                              data-size="md"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <circle
                                cx="12"
                                cy="12"
                                r="4"
                              />
                              <path
                                d="M12 2v2"
                              />
                              <path
                                d="M12 20v2"
                              />
                              <path
                                d="m4.93 4.93 1.41 1.41"
                              />
                              <path
                                d="m17.66 17.66 1.41 1.41"
                              />
                              <path
                                d="M2 12h2"
                              />
                              <path
                                d="M20 12h2"
                              />
                              <path
                                d="m6.34 17.66-1.41 1.41"
                              />
                              <path
                                d="m19.07 4.93-1.41 1.41"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          aria-live="polite"
                          class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                          role="status"
                        />
                      </button>
                      <div
                        class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
                        id="<reactid>"
                        popover="manual"
                        role="tooltip"
                        style="position-anchor: --astryx-layer-<reactid>; position-area: self-block-start; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;"
                      >
                        <div
                          class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
                        >
                          Switch to light theme
                        </div>
                      </div>
                      <div
                        aria-label="Select language"
                        role="group"
                        style="display: flex; gap: 4px; margin-left: auto;"
                      >
                        <button
                          aria-label="English"
                          aria-pressed="true"
                          class="astryx-button primary sm x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xce4md1 xrrkdod xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x6k0iem x1ewilqj x17wrial x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x3oybdh xk4oym4"
                          data-size="sm"
                          data-variant="primary"
                          type="button"
                          value="en"
                        >
                          <span
                            class="xjp7ctv"
                          >
                            <span
                              class="xb3r6kr xlyipyv xeuugli"
                            >
                              EN
                            </span>
                          </span>
                          <span
                            aria-live="polite"
                            class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                            role="status"
                          />
                        </button>
                        <button
                          aria-label="Deutsch"
                          aria-pressed="false"
                          class="astryx-button ghost sm x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xce4md1 xrrkdod xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x6k0iem xjbqb8w x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x3oybdh xk4oym4"
                          data-astryx-edge-comp=""
                          data-size="sm"
                          data-variant="ghost"
                          type="button"
                          value="de"
                        >
                          <span
                            class="xjp7ctv"
                          >
                            <span
                              class="xb3r6kr xlyipyv xeuugli"
                            >
                              DE
                            </span>
                          </span>
                          <span
                            aria-live="polite"
                            class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                            role="status"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
          <div
            class="x78zum5 x1q0g3np x98rzlu x2lwn1j"
          >
            <div
              class="x2lwn1j xeuugli x1iyjqo2"
            >
              <div
                class="astryx-layout-content x9f619 x5yr21d x98rzlu x2lwn1j x7giv3 x18gyask x1s0aq8i x1ydh6w3 x1l20ajd x1gu2k80 x91ghl5 x1i3qcxz xkunwnr x10xzikg"
                id="astryx-app-shell-main"
                role="main"
              >
                <div
                  data-testid="scan-progress"
                />
                <div
                  data-testid="route-content"
                >
                  Content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <dialog
        aria-label="kbeatz"
        class="astryx-mobile-nav end xixxii4 x1ghz6dp x1717udv x1x1rfll x7ab17h x10a8y8t xn9wirt xtdtrs8 xjbqb8w xb3r6kr xish69e x5ve5x3 x1a2a7pz x1s85apg xnixb3f x1abwkk1 xph5o2a x167zut7 xft5bk6 x15h3t91 x1viac0w"
        data-side="end"
      >
        <div
          class="x10l6tqk x13vifvy x1ey2m1c x78zum5 xdt5ytf x10xzikg x9f619 xb3r6kr x11xpdln x80gvsz xlr8y92 x1a2a7pz xzg1mie xn9wirt xf68679 xtijo5x xgbv0en x1t7ytsu x1j92z86 xumwmo6 x1df3fe5"
          style="--x-maxWidth: 320px;"
          tabindex="-1"
        >
          <div
            class="x78zum5 x6s0dn4 x1qughib x1k15mir xf314gf x2lah0s x92x3c3 x1q0q8m5 xw8gpjh"
          >
            <span
              class="x11g1kdw"
            >
              <h2
                class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
                data-color="primary"
                data-level="2"
              >
                kbeatz
              </h2>
            </span>
            <button
              aria-label="Close navigation"
              class="astryx-button ghost md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 xjbqb8w x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x1v15ycx xioom0i xnjsko4 xt970qd x3oybdh xk4oym4"
              data-astryx-edge-comp=""
              data-size="md"
              data-variant="ghost"
              type="button"
            >
              <span
                class="xjp7ctv"
              >
                <span
                  class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
                >
                  <span
                    aria-hidden="true"
                    class="astryx-icon md inherit x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1heor9g xw4jnvo x1qx5ct2 xwsyq91"
                    data-color="inherit"
                    data-size="md"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-x"
                      fill="none"
                      height="1em"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M18 6 6 18"
                      />
                      <path
                        d="m6 6 12 12"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                aria-live="polite"
                class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                role="status"
              />
            </button>
          </div>
          <div
            class="x98rzlu x1odjw0f x6ikm8r xish69e xx69xxh xf314gf xce4md1"
          >
            <div
              class="x78zum5 xdt5ytf xh8yej3"
            >
              <a
                aria-current="page"
                class="astryx-side-nav-item md selected x78zum5 x6s0dn4 x1txdalj xh8yej3 xt970qd xh6dtrn xc342km xng3xce x1tgivj0 x1hl2dhg x1ypdohk xjb2p0i xcr08ib x1kq96og x1yc453h x9f619 x1ueg155 xf314gf x17x4s8c x1e4wzip x1sua13m xjtnuge"
                data-discover="true"
                data-selected="selected"
                data-size="md"
                href="/"
              >
                <span
                  class="x98rzlu xeuugli xb3r6kr xlyipyv xuxw1ft"
                >
                  Albums
                </span>
              </a>
            </div>
            <div
              class="x78zum5 xdt5ytf xh8yej3"
            >
              <a
                class="astryx-side-nav-item md x78zum5 x6s0dn4 x1txdalj xh8yej3 xt970qd xh6dtrn xc342km xng3xce xjbqb8w x1tgivj0 x1hl2dhg x1ypdohk xjb2p0i xcr08ib x1sodnla x1kq96og x1yc453h x9f619 xe9uy6x xyxi2l3 x1ueg155 xf314gf"
                data-discover="true"
                data-size="md"
                href="/library"
              >
                <span
                  class="x98rzlu xeuugli xb3r6kr xlyipyv xuxw1ft"
                >
                  Library
                </span>
              </a>
            </div>
            <div
              class="x78zum5 xdt5ytf xh8yej3"
            >
              <a
                class="astryx-side-nav-item md x78zum5 x6s0dn4 x1txdalj xh8yej3 xt970qd xh6dtrn xc342km xng3xce xjbqb8w x1tgivj0 x1hl2dhg x1ypdohk xjb2p0i xcr08ib x1sodnla x1kq96og x1yc453h x9f619 xe9uy6x xyxi2l3 x1ueg155 xf314gf"
                data-discover="true"
                data-size="md"
                href="/settings"
              >
                <span
                  class="x98rzlu xeuugli xb3r6kr xlyipyv xuxw1ft"
                >
                  Settings
                </span>
              </a>
            </div>
          </div>
        </div>
      </dialog>
    </div>
  </div>
</div>
`;

exports[`AppShell visual regression > matches the shell snapshot in light theme 1`] = `
<div>
  <div
    class="xjp7ctv x1tgivj0 x9ynric x19aimcq"
    data-astryx-theme="neutral"
    data-theme="light"
  >
    <div
      class="astryx-app-shell elevated x78zum5 xdt5ytf x1n2onr6 x1eiddq6 x1ov3xa9"
      data-variant="elevated"
      style="--appshell-header-height: 0px;"
    >
      <a
        class="x10l6tqk x1xrnuwo x1i1rx1s x1jqxupm xjm9jq1 x15cytp8 xt970qd xh2mrf5 xnjsko4 x1cf3d6k xkdpibf x1y5lnwp xb3r6kr xomzh7y x1hyvwdk x1rsz1da xuxw1ft x1hbpcn8 xc342km x13vifvy x1rw3289 x1o0tod xodanix x10xzikg xjse4m1 x1q2oy4v x1hl2dhg x2mo6ok xjm74w1"
        data-testid="skip-to-content"
        href="#astryx-app-shell-main"
      >
        Skip to content
      </a>
      <div
        class="astryx-layout auto xojxgvx x1fcf3bl x1sa9bsh x6h7pi7 x1us19tq"
        data-height="auto"
      >
        <div
          class="x-default-marker xrhngw9 xjsfl84 x1047aw6 xax9j7h x78zum5 xdt5ytf x1us19tq xswhm3q x1mzf5mb"
        >
          <div
            class="astryx-app-shell-header elevated x1eiddq6 x7wzq59 x13vifvy x1vjfegm"
            data-variant="elevated"
          >
            <div
              class="astryx-layout-header x2lah0s"
            >
              <div
                class="x9f619 xjl2t3p xvueqy4 x18gyask x1s0aq8i x1ydh6w3 x1l20ajd x1gu2k80 x91ghl5 x1i3qcxz xkunwnr"
              >
                <nav
                  aria-label="Primary navigation"
                  class="astryx-top-nav x6s0dn4 xh8yej3 xlsj2fj x9f619 x78zum5"
                  role="navigation"
                >
                  <div
                    class="x78zum5 x6s0dn4 x18g69wz x845mor xeuugli"
                  >
                    <div
                      class="x78zum5 x6s0dn4 x2lah0s"
                    >
                      <a
                        aria-label="kbeatz"
                        class="astryx-link accent x3nfvp2 x6s0dn4 x1lsbc85 xjb2p0i x1qlqyl8 x15bjb6t x1pd3egz x1hl2dhg x4ohgrr x1ypdohk x1mpt4pi xuedmi6 xlr8y92 x17nn4n9 x1wfwxd8 x7s97pk xjse4m1 x17qfo7y"
                        data-color="accent"
                        data-discover="true"
                        href="/"
                      >
                        <span
                          class="astryx-text body accent xjse4m1 xjm74w1 xw6l6zx xxovm9e xt0psk2"
                          data-color="accent"
                          data-type="body"
                        >
                          <img
                            alt=""
                            height="32"
                            src="/src/assets/kbeatz-logo-transparent.svg"
                            style="display: block; width: auto;"
                          />
                        </span>
                      </a>
                    </div>
                    <div
                      class="x78zum5 x6s0dn4 xzye2dw"
                    >
                      <div
                        class="kbeatz-desktop-only"
                      >
                        <div
                          class="astryx-stack horizontal gap-0.5 x78zum5 x1q0g3np x1kihgfc x1tw44j4 x6s0dn4"
                          data-direction="horizontal"
                          data-gap="0.5"
                        >
                          <a
                            aria-current="page"
                            class="astryx-top-nav-item selected x3nfvp2 x6s0dn4 x1txdalj x1vofgu7 xrrkdod xh6dtrn xcr08ib x1kq96og x1hl2dhg x1ypdohk xs2xxs2 xuedmi6 xlr8y92 x17nn4n9 x1wfwxd8 x7s97pk x1tgivj0 x2mo6ok x17x4s8c x1sua13m xjtnuge"
                            data-discover="true"
                            data-selected="selected"
                            href="/"
                          >
                            Albums
                          </a>
                          <a
                            class="astryx-top-nav-item x3nfvp2 x6s0dn4 x1txdalj x1vofgu7 xrrkdod xh6dtrn xcr08ib x1kq96og x1e4wzip xv1l7n4 x1hl2dhg x1ypdohk xs2xxs2 xuedmi6 xlr8y92 xjbqb8w xe9uy6x xyxi2l3 x17nn4n9 x1wfwxd8 x7s97pk"
                            data-discover="true"
                            href="/library"
                          >
                            Library
                          </a>
                          <a
                            class="astryx-top-nav-item x3nfvp2 x6s0dn4 x1txdalj x1vofgu7 xrrkdod xh6dtrn xcr08ib x1kq96og x1e4wzip xv1l7n4 x1hl2dhg x1ypdohk xs2xxs2 xuedmi6 xlr8y92 xjbqb8w xe9uy6x xyxi2l3 x17nn4n9 x1wfwxd8 x7s97pk"
                            data-discover="true"
                            href="/settings"
                          >
                            Settings
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="x78zum5 x6s0dn4 xzye2dw x2lah0s xvc5jky"
                  >
                    <div
                      class="astryx-stack horizontal gap-0.5 x78zum5 x1q0g3np x1kihgfc x1tw44j4 x6s0dn4"
                      data-direction="horizontal"
                      data-gap="0.5"
                    >
                      <button
                        aria-describedby="<reactid>"
                        aria-label="Switch to dark theme"
                        class="astryx-button ghost md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 xjbqb8w x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x1v15ycx xioom0i xnjsko4 xt970qd x3oybdh xk4oym4"
                        data-astryx-edge-comp=""
                        data-size="md"
                        data-variant="ghost"
                        style="anchor-name: --astryx-layer-<reactid>;"
                        type="button"
                      >
                        <span
                          class="xjp7ctv"
                        >
                          <span
                            class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-moon astryx-icon md inherit x2lah0s x1heor9g xw4jnvo x1qx5ct2"
                              data-color="inherit"
                              data-size="md"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          aria-live="polite"
                          class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                          role="status"
                        />
                      </button>
                      <div
                        class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
                        id="<reactid>"
                        popover="manual"
                        role="tooltip"
                        style="position-anchor: --astryx-layer-<reactid>; position-area: self-block-start; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;"
                      >
                        <div
                          class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
                        >
                          Switch to dark theme
                        </div>
                      </div>
                      <div
                        aria-label="Select language"
                        role="group"
                        style="display: flex; gap: 4px; margin-left: auto;"
                      >
                        <button
                          aria-label="English"
                          aria-pressed="true"
                          class="astryx-button primary sm x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xce4md1 xrrkdod xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x6k0iem x1ewilqj x17wrial x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x3oybdh xk4oym4"
                          data-size="sm"
                          data-variant="primary"
                          type="button"
                          value="en"
                        >
                          <span
                            class="xjp7ctv"
                          >
                            <span
                              class="xb3r6kr xlyipyv xeuugli"
                            >
                              EN
                            </span>
                          </span>
                          <span
                            aria-live="polite"
                            class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                            role="status"
                          />
                        </button>
                        <button
                          aria-label="Deutsch"
                          aria-pressed="false"
                          class="astryx-button ghost sm x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xce4md1 xrrkdod xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x6k0iem xjbqb8w x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x3oybdh xk4oym4"
                          data-astryx-edge-comp=""
                          data-size="sm"
                          data-variant="ghost"
                          type="button"
                          value="de"
                        >
                          <span
                            class="xjp7ctv"
                          >
                            <span
                              class="xb3r6kr xlyipyv xeuugli"
                            >
                              DE
                            </span>
                          </span>
                          <span
                            aria-live="polite"
                            class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                            role="status"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
          <div
            class="x78zum5 x1q0g3np x98rzlu x2lwn1j"
          >
            <div
              class="x2lwn1j xeuugli x1iyjqo2"
            >
              <div
                class="astryx-layout-content x9f619 x5yr21d x98rzlu x2lwn1j x7giv3 x18gyask x1s0aq8i x1ydh6w3 x1l20ajd x1gu2k80 x91ghl5 x1i3qcxz xkunwnr x10xzikg"
                id="astryx-app-shell-main"
                role="main"
              >
                <div
                  data-testid="scan-progress"
                />
                <div
                  data-testid="route-content"
                >
                  Content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <dialog
        aria-label="kbeatz"
        class="astryx-mobile-nav end xixxii4 x1ghz6dp x1717udv x1x1rfll x7ab17h x10a8y8t xn9wirt xtdtrs8 xjbqb8w xb3r6kr xish69e x5ve5x3 x1a2a7pz x1s85apg xnixb3f x1abwkk1 xph5o2a x167zut7 xft5bk6 x15h3t91 x1viac0w"
        data-side="end"
      >
        <div
          class="x10l6tqk x13vifvy x1ey2m1c x78zum5 xdt5ytf x10xzikg x9f619 xb3r6kr x11xpdln x80gvsz xlr8y92 x1a2a7pz xzg1mie xn9wirt xf68679 xtijo5x xgbv0en x1t7ytsu x1j92z86 xumwmo6 x1df3fe5"
          style="--x-maxWidth: 320px;"
          tabindex="-1"
        >
          <div
            class="x78zum5 x6s0dn4 x1qughib x1k15mir xf314gf x2lah0s x92x3c3 x1q0q8m5 xw8gpjh"
          >
            <span
              class="x11g1kdw"
            >
              <h2
                class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
                data-color="primary"
                data-level="2"
              >
                kbeatz
              </h2>
            </span>
            <button
              aria-label="Close navigation"
              class="astryx-button ghost md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 xjbqb8w x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x1v15ycx xioom0i xnjsko4 xt970qd x3oybdh xk4oym4"
              data-astryx-edge-comp=""
              data-size="md"
              data-variant="ghost"
              type="button"
            >
              <span
                class="xjp7ctv"
              >
                <span
                  class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
                >
                  <span
                    aria-hidden="true"
                    class="astryx-icon md inherit x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1heor9g xw4jnvo x1qx5ct2 xwsyq91"
                    data-color="inherit"
                    data-size="md"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-x"
                      fill="none"
                      height="1em"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M18 6 6 18"
                      />
                      <path
                        d="m6 6 12 12"
                      />
                    </svg>
                  </span>
                </span>
              </span>
              <span
                aria-live="polite"
                class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                role="status"
              />
            </button>
          </div>
          <div
            class="x98rzlu x1odjw0f x6ikm8r xish69e xx69xxh xf314gf xce4md1"
          >
            <div
              class="x78zum5 xdt5ytf xh8yej3"
            >
              <a
                aria-current="page"
                class="astryx-side-nav-item md selected x78zum5 x6s0dn4 x1txdalj xh8yej3 xt970qd xh6dtrn xc342km xng3xce x1tgivj0 x1hl2dhg x1ypdohk xjb2p0i xcr08ib x1kq96og x1yc453h x9f619 x1ueg155 xf314gf x17x4s8c x1e4wzip x1sua13m xjtnuge"
                data-discover="true"
                data-selected="selected"
                data-size="md"
                href="/"
              >
                <span
                  class="x98rzlu xeuugli xb3r6kr xlyipyv xuxw1ft"
                >
                  Albums
                </span>
              </a>
            </div>
            <div
              class="x78zum5 xdt5ytf xh8yej3"
            >
              <a
                class="astryx-side-nav-item md x78zum5 x6s0dn4 x1txdalj xh8yej3 xt970qd xh6dtrn xc342km xng3xce xjbqb8w x1tgivj0 x1hl2dhg x1ypdohk xjb2p0i xcr08ib x1sodnla x1kq96og x1yc453h x9f619 xe9uy6x xyxi2l3 x1ueg155 xf314gf"
                data-discover="true"
                data-size="md"
                href="/library"
              >
                <span
                  class="x98rzlu xeuugli xb3r6kr xlyipyv xuxw1ft"
                >
                  Library
                </span>
              </a>
            </div>
            <div
              class="x78zum5 xdt5ytf xh8yej3"
            >
              <a
                class="astryx-side-nav-item md x78zum5 x6s0dn4 x1txdalj xh8yej3 xt970qd xh6dtrn xc342km xng3xce xjbqb8w x1tgivj0 x1hl2dhg x1ypdohk xjb2p0i xcr08ib x1sodnla x1kq96og x1yc453h x9f619 xe9uy6x xyxi2l3 x1ueg155 xf314gf"
                data-discover="true"
                data-size="md"
                href="/settings"
              >
                <span
                  class="x98rzlu xeuugli xb3r6kr xlyipyv xuxw1ft"
                >
                  Settings
                </span>
              </a>
            </div>
          </div>
        </div>
      </dialog>
    </div>
  </div>
</div>
`;
